# rust_quadcopter_firmware

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/io/: mod.rs
common/src/motor_control/: mod.rs
common/src/protocol/: mod.rs
common/src/uart_com/: mod.rs
common/src/utility/: internal_error_enums.rs  mod.rs  static_assert.rs
dronecode/: Cargo.toml
dronecode/src/: calibrationdata.rs  control.rs  main.rs  sensors_dmp.rs  sensors_raw.rs  yaw_pitch_roll.rs
dronecode/src/drone/: config.rs  controller.rs  mod.rs  state.rs
dronecode/src/state_machine/: calibratemode.rs  common_utility.rs  fullcontrolmode.rs  manualmode.rs  mod.rs  panicmode.rs  rawmode.rs  safemode.rs  yawcontrolmode.rs
runner/: Cargo.toml  README.md
runner/config/: 40-quadrupel.rules
runner/src/: gui.rs  logger.rs  main.rs  serial_wrapper.rs
runner/src/input/: joystick.rs  keyboard.rs  mod.rs
runner/src/logic/: mod.rs
runner/src/utils/: constants.rs  mod.rs  periodic.rs
scripts/: module_tree.sh  test.sh
