[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", default-features = false,  features = ["derive", "alloc"]}
postcard = "1.0.4"
crc = "3.0.1"
heapless = "0.7.16"
ringbuffer = "0.12.0"
fixed-sqrt = "0.2.5"

[dependencies.fixed]
version = "1.23.0"
features = ["serde"]
