cargo-features = ["per-package-target"]


[package]
name = "runner"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-serial-upload = "1"
serial2 = "0.1.7"
pasts = "0.8"
stick = "0.12"
termion = "2.0.1"
lazy_static = "1.4.0"
log = "0.4.17"
chrono="0.4.23"
common = { path = "../common" }
eframe ="0.21.3"
egui = "0.21.0"
fixed = "1.23.0"
